CQRS configured to connect with frontend